After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758870 - clock: GST_STIME_ARGS does not handle GST_CLOCK_STIME_NONE
clock: GST_STIME_ARGS does not handle GST_CLOCK_STIME_NONE
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-30 21:02 UTC by Nicolas Dufresne (ndufresne)
Modified: 2015-12-01 16:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstclock: Fix GST_STIME_ARGS (1.41 KB, patch)
2015-12-01 08:18 UTC, Edward Hervey
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2015-11-30 21:02:34 UTC
In presence of GST_CLOCK_STIME_NONE, GST_STIME_ARGS should print  99:99:99.999999999 to indicate the special value.
Comment 1 Edward Hervey 2015-12-01 08:18:27 UTC
Created attachment 316573 [details] [review]
gstclock: Fix GST_STIME_ARGS

It wasn't properly handling GST_CLOCK_STIME_NONE and always use the
sign marker (+/-) to make it easier to identify signed values in
logs
Comment 2 Nicolas Dufresne (ndufresne) 2015-12-01 14:25:24 UTC
Review of attachment 316573 [details] [review]:

Hmm, I forgot to attach my patch yesterday. I don't really like the + - to be fair, we all know that no sign is positive (it's also harder to parse in LibreOffice Calc with the +). I don't mind duplicating, but the patch I started preparing doest not duplicate the code.
Comment 3 Nicolas Dufresne (ndufresne) 2015-12-01 16:17:32 UTC
Review of attachment 316573 [details] [review]:

As per IRC discussion. (y)
Comment 4 Edward Hervey 2015-12-01 16:18:51 UTC
commit e5d5f99a9ed749f99a93e8afbfa722f652febaf7
Author: Edward Hervey <edward@centricular.com>
Date:   Mon Nov 30 17:11:33 2015 +0100

    gstclock: Fix GST_STIME_ARGS
    
    It wasn't properly handling GST_CLOCK_STIME_NONE and always use the
    sign marker (+/-) to make it easier to identify signed values in
    logs
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758870